--- a/postgres-appliance/Dockerfile
+++ b/postgres-appliance/Dockerfile
@@ -1,9 +1,9 @@
 ARG BASE_IMAGE=ubuntu:22.04
 ARG PGVERSION=16
-ARG TIMESCALEDB="2.11.2 2.14.2"
+ARG TIMESCALEDB="2.14.2"
 ARG DEMO=false
 ARG COMPRESS=false
-ARG ADDITIONAL_LOCALES=
+ARG ADDITIONAL_LOCALES=""
 
 
 FROM ubuntu:18.04 as ubuntu-18
@@ -45,8 +45,8 @@ COPY --from=dependencies-builder /builddeps/*.deb /builddeps/
 
 ARG PGVERSION
 ARG TIMESCALEDB
-ARG TIMESCALEDB_APACHE_ONLY=true
-ARG TIMESCALEDB_TOOLKIT=true
+ARG TIMESCALEDB_APACHE_ONLY=false
+ARG TIMESCALEDB_TOOLKIT=false
 ARG COMPRESS
 ARG PGOLDVERSIONS="12 13 14 15"
 ARG WITH_PERL=false
